fixed css on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -99,27 +99,33 @@ p {
     text-align: right;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 400px) {
     p {
-        font-size: 25px;
+        font-size: 15px;
+    }
+}
+
+@media screen and (min-width: 400px) {
+    p {
+        font-size: 15px;
     }
 }
 
 @media screen and (min-width: 600px) {
     p {
-        font-size: 30px;
+        font-size: 25px;
     }
 }
 
 @media screen and (min-width: 768px) {
     p {
-        font-size: 35px;
+        font-size: 30px;
     }
 }
 
 @media screen and (min-width: 992px) {
     p {
-        font-size: 40px;
+        font-size: 35px;
     }
 }
 
